<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath />
	</parent>

	<groupId>mx.att.digital.api</groupId>
	<artifactId>management</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>management</name>
	<description>TMF management-api-TMFXXX v4.0</description>

	<modules>
		<module>infrastructure/in/management-api-rest</module>
		<!-- Add module out Adapters-->
		<module>infrastructure/out/management-database</module>
		<!--module>infrastructure/out/management-events</module-->
		<module>domain</module>
		<module>boot</module>
		<module>application</module>
		<module>logging-core</module>
	</modules>

	<properties>
		<revision>0.0.1</revision>
		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
		<lombok.version>1.18.38</lombok.version>
		<mapstruct.processor.version>1.6.3</mapstruct.processor.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.language>java</sonar.language>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
		<sonar-maven-plugin.version>5.1.0.4751</sonar-maven-plugin.version>
		<wiremock-spring-boot.version>3.10.0</wiremock-spring-boot.version>
		<jackson-core.version>2.19.1</jackson-core.version>
		<jackson-databind.version>2.19.1</jackson-databind.version>
		<junit-jupiter.version>5.13.2</junit-jupiter.version>
		<mockito.version>5.18.0</mockito.version>
		<spring-boot.version>3.3.0</spring-boot.version>
		<resilience4j.version>2.3.0</resilience4j.version>
		<att.logger.version>0.0.1</att.logger.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>mx.att.digital.api</groupId>
				<artifactId>management-application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mx.att.digital.api</groupId>
				<artifactId>management-api-rest</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mx.att.digital.ap</groupId>
				<artifactId>management-domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mx.att.digital.api.logger</groupId>
				<artifactId>logging-core</artifactId>
				<version>${att.logger.version}</version>
			</dependency>
			<!-- Resilience4j BOM para armonizar versiones -->
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-bom</artifactId>
				<version>${resilience4j.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.processor.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>${mapstruct.processor.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.resilience4j</groupId>
			<artifactId>resilience4j-spring-boot3</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.resilience4j</groupId>
			<artifactId>resilience4j-micrometer</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>8.1</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.2.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration><propertyName>surefireArgLine</propertyName></configuration>
					</execution>
					<execution>
						<goals>
							<goal>prepare-agent-integration</goal>
							<goal>report</goal>
							<goal>report-integration</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
				
                    <argLine>${surefireArgLine} -XX:+EnableDynamicAgentLoading -Xmx1024m</argLine>
                </configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>${sonar-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

</project>
